fix mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -51,5 +51,5 @@
 }
 
 body {
-  @apply roboto-condensed-regular text-sm;
+  @apply roboto-condensed-regular text-sm overflow-hidden md:overflow-auto;
 }
